--- a/index.html
+++ b/index.html
@@ -134,11 +134,89 @@
       </div>
     </section>
 
+    <!--FORMULARIO-->
+
+    <section class="formulario">
+      <h2>Contáctanos</h2>
+
+      <div class="contacto-contenido">
+        <form class="formulario-contacto" id="formularioContacto" name="frm">
+          <div class="form-grupo">
+            <label for="nombres">Nombres:</label>
+            <input type="text" id="nombres" name="nombres" />
+          </div>
+
+          <div class="form-grupo">
+            <label for="apellidos">Apellidos:</label>
+            <input type="text" id="apellidos" name="apellidos" />
+          </div>
+
+          <div class="form-grupo">
+            <label for="tipoDoc">Tipo de Documento:</label>
+            <select id="tipoDoc" name="tipoDoc">
+              <option value="dni">DNI</option>
+              <option value="pasaporte">Pasaporte</option>
+              <option value="carnet">Carnet de Extranjería</option>
+            </select>
+          </div>
+
+          <div class="form-grupo">
+            <label for="telefono">Teléfono:</label>
+            <input type="tel" id="telefono" name="telefono" />
+          </div>
+
+          <div class="form-grupo">
+            <label for="pais">País:</label>
+            <select id="pais" name="pais">
+              <option value="peru">Perú</option>
+              <option value="chile">Chile</option>
+              <option value="colombia">Colombia</option>
+            </select>
+          </div>
+
+          <div class="form-grupo">
+            <label for="email">Correo electrónico:</label>
+            <input type="email" id="email" name="email" />
+          </div>
+
+          <div class="form-grupo">
+            <label for="asunto">Asunto:</label>
+            <textarea id="asunto" name="asunto" rows="3"></textarea>
+          </div>
+
+          <div class="form-grupo">
+            <label>Preferencias de contacto:</label>
+            <div class="checkboxes">
+              <label
+                ><input type="checkbox" name="preferencia" value="correo" />
+                Correo</label
+              >
+              <label
+                ><input type="checkbox" name="preferencia" value="telefono" />
+                Teléfono</label
+              >
+            </div>
+            </div>
+          </div>
+
+          <button type="submit">Enviar</button>
+        </form>
+
+        <div id="mensajeEnviado" class="mensaje-enviado" style="display: none">
+          Mensaje enviado correctamente.
+        </div>
+      </div>
+    </section>
+
     <!-- PIE DE PAGINA -->
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-brand">
-          <img src="public/assets/img/logo.png" class="footer-logo" alt="Logo" />
+          <img
+            src="public/assets/img/logo.png"
+            class="footer-logo"
+            alt="Logo"
+          />
           <p>RecyConnect</p>
           <small>© 2025 Todos los derechos reservados</small>
         </div>
@@ -147,7 +225,7 @@
           <h4>Legal</h4>
           <a href="#">Política de Privacidad</a>
           <a href="#">Términos y Condiciones</a>
-          <a href="documents/Proteccion-Datos.pdf">Protección de Datos</a>
+          <a href="public/assets/documents/Proteccion-Datos.pdf">Protección de Datos</a>
         </div>
 
         <div class="footer-social">
@@ -179,5 +257,6 @@
         </div>
       </div>
     </footer>
+    <script src="public/assets/scripts/main.js"></script>
   </body>
 </html>
