--- a/index.html
+++ b/index.html
@@ -92,6 +92,21 @@
         </div>
       </div>
     </section>
+    
+    <!--VIDEO-->
+
+    <section class="video-seccion">
+      <h2>ABOUT THE TEAM</h2>
+      <div class="video-contenedor">
+        <iframe
+          src="https://www.youtube.com/embed/QQBBgOBHy8U"
+          title="Video sobre el equipo de RecyConnect"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
 
     <!-- CARACTERÍSTICAS -->
     <section id="caracteristicas" class="caracteristicas">
